--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -10,4 +10,15 @@
   flex-direction: row;
   flex-wrap: wrap;
   height: 280px;
+  justify-content: flex-end;
+  justify-content: center;
+  justify-content: space-around;
+  justify-content: space-between;
+}
+
+/*.item-1 {
+  margin-right: auto;
+}*/
+.item-2 {
+  margin-right: auto;
 }
