Growing Flex Items

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -9,20 +9,28 @@
   flex-direction: column;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 280px;
-  justify-content: flex-end;
-  justify-content: center;
-  justify-content: space-around;
-  justify-content: space-between;
+  /*height: 280px;*/
+  /*justify-content: flex-end;*/
+  /*justify-content: center;*/
+  /*justify-content: space-around;*/
+  /*justify-content: space-between;*/
+  /*flex-wrap: wrap;*/
 }
 
+.item {
+  flex-grow: 1;
+}
 .item-1 {
   /*margin-right: auto;*/
-  order: 1
+  /*order: 1*/
+  flex-grow: 4;
 }
 .item-2 {
-  margin-right: auto;
+  /*margin-right: auto;*/
+}
+.item-3 {
+  flex-grow: 3;
 }
 .item-6 {
-  order: -1;
+  /*order: -1;*/
 }
