--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -2,12 +2,12 @@
   Flexbox
 ==================================== */
 .container {
-  display: inline-flex;
-  display: flex;
-  flex-direction: column-reverse;
+  /*display: inline-flex;*/
+  /*flex-direction: column-reverse;
   flex-direction: row-reverse;
   flex-direction: column;
-  flex-direction: row;
+  flex-direction: row;*/
+  display: flex;
   flex-wrap: wrap;
   /*height: 280px;*/
   /*justify-content: flex-end;*/
@@ -18,18 +18,23 @@
 }
 
 .item {
-  flex-grow: 1;
+  /*flex-grow: 1;
+  flex-basis: 200px;*/
+  /*flex: 1 200px ;*/
+  flex: 1;
 }
 .item-1 {
   /*margin-right: auto;*/
   /*order: 1*/
-  flex-grow: 4;
+  /*flex-grow: 4;*/
 }
 .item-2 {
   /*margin-right: auto;*/
+  /*flex-grow: 3;*/
+  flex: 2;
 }
 .item-3 {
-  flex-grow: 3;
+  /*flex-grow: 3;*/
 }
 .item-6 {
   /*order: -1;*/
